--- a/code/synthetic_data_generator.ipynb
+++ b/code/synthetic_data_generator.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "Rol: Actúa como un experto en Ingeniería de Datos y Ciencia de Datos especializado en Retail Analytics.\n",
     "\n",
-    "Tarea: Generar un dataset sintético en Python (usando Pandas y Numpy) para un modelo de Elasticidad de Precio.\n",
+    "Herramienta principal: Libreria Faker de Python\n",
+    "\n",
+    "Tarea: Generar un dataset sintético en Python (usando Pandas, Numpy y Faker) para un modelo de Elasticidad de Precio.\n",
     "\n",
     "Estructura de la Tabla:\n",
     "\n",
@@ -52,7 +54,9 @@
     "\n",
     "Role: Act as a Data Engineering and Data Science expert specializing in Retail Analytics.\n",
     "\n",
-    "Task: Generate a synthetic dataset in Python (using Pandas and NumPy) for a Price Elasticity model.\n",
+    "Task: Generate a synthetic dataset in Python (using Pandas, NumPy and Faker) for a Price Elasticity model.\n",
+    "\n",
+    "Primary tool: Faker library for Python\n",
     "\n",
     "Table Structure:\n",
     "\n",
